# acondbs

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .travis.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: dockerhub.yml  publish.yml  release.yml  test.yml  type-check.yml  unit-test.yml
acondbs/: __init__.py  _logging.py  _version.py  _warnings.py  bpgraphql.py  bpquery.py  db.py  models.py  schema.py
acondbs/auth/: __init__.py
acondbs/blueprint/: __init__.py
acondbs/blueprint/graphql_ide/: __init__.py  graphiql_newer.py  graphql_playground.py
acondbs/db/: __init__.py  backup.py  cmds.py  conn.py  db.py  gitb.py  ops.py  sa.py
acondbs/github/: api.py  auth.py  call.py  ops.py  query.py
acondbs/migrations/: README.md  alembic.ini  env.py
acondbs/migrations/versions/: 097c6676314c_change_enum.py  0cce33011766_.py  0f7fd06aa729_add_three_columns_to_product_relation_.py  0ff075f16b94_rename_column.py  12cc2bed191c_rename_table.py  1583f2de9f39_add_attribute_tables.py  1a6a95202069_rename_input_map_id_input_map_product_id.py  1f86dd56d829_copy_data_in_web_config.py  2023-06-14_14:41-2ed9841987be.py  2910eaefa574_copy_to_attribute_tables.py  2b15f740eed9_add_a_field_time_created_to_github_.py  2ed9841987be_remove_columns_from_products.py  35e6ddccd22a_copy_attributes.py  3746a752f344_add_table_web_config.py  3c5d60d0c0d8_.py  3c88fd09fbae_rename_simulation_file_path_id_path_id.py  3f4e8bfd8a7f_add_column_reverse_type_id_to_product_.py  3f6526e7e5ff_add_tables_github_.py  3f804a98ab06_add_table_log.py  41e5ff6f2878_add_attribute_tables.py  4398f463d243_delete_some_attributes.py  4796e7f9c766_rename_date_posted_date_produced.py  4c32365bb655_rename_a_column_name_in_account_admins.py  4e8693037e72_add_fields_to_github_orgs_and_github_.py  63033c01def0_add_fields_to_github_admin_app_token.py  63790f65e724_rename_table_web_config.py  6583f441b991_initial_migration.py  6bd27755b1a8_remove_column_from_attribute_tables.py  74eb8e3b2ccb_add_table_logging.py  7f50d622bc34_rename_mapper_produced_by.py  8585129ca524_make_login_unique_on_github_users.py  8e3f13ce98cb_make_nullable_false.py  8f76dc6db945_rename_map_file_pah_id_path_id.py  919b1bc74839_add_a_field_git_hub_id_to_github_orgs.py  936fc5b02f16_rename_the_table_github_accepted_orgs_.py  9495d7cb31ec_enter_data_to_field_table.py  9f22f713c4ea_add_a_field_git_hub_id_to_github_users.py  a4105346b478_change_column_type.py  a45282be3864_inherit_commonfields_in_beam.py  a7938a183f26_rename_beam_id_product_id.py  (+25 more)
acondbs/misc/: cap.py  gitb.py  githubauth.py  lock.py
acondbs/models/: __init__.py  funcs.py  github_accepted_org.py  github_admin_app_token.py  github_org_membership.py  github_user.py  models.py  product.py  product_file_path.py  product_relation.py  product_relation_type.py  product_type.py  web_config.py
acondbs/models/account/: __init__.py  account_admin.py
acondbs/models/github/: __init__.py  github_accepted_org.py  github_admin_app_token.py  github_org.py  github_org_membership.py  github_token.py  github_user.py
acondbs/models/misc/: __init__.py  log.py  logging.py
acondbs/models/product/: __init__.py  attribute.py  field.py  product.py  product_file_path.py  product_relation.py  product_relation_type.py  product_type.py  type_field_association.py
acondbs/models/web/: __init__.py  web_config.py
acondbs/ops/: __init__.py  field.py  log.py  misc.py  product.py  product_file_path.py  product_relation.py  product_relation_type.py  product_type.py  web_config.py
acondbs/schema/: __init__.py  auth.py  beam.py  beam_file_path.py  common.py  connection.py  filter_.py  funcs.py  map_.py  map_file_path.py  mutation.py  product.py  product_file_path.py  product_relation.py  product_relation_type.py  product_type.py  query.py  schema.py  simulation.py  simulation_file_path.py  version.py  web_config.py
acondbs/schema/auth/: __init__.py  query.py
acondbs/schema/github/: __init__.py  auth.py  github_admin_app_token.py  github_oauth_app_info.py  github_user.py  mutation.py  query.py  type_.py
acondbs/schema/misc/: mutation.py  query.py  type_.py
acondbs/schema/product/: __init__.py  filter_.py  product.py  product_file_path.py  product_relation.py  product_relation_type.py  product_type.py  query.py  type_.py
acondbs/schema/web/: __init__.py  mutation.py  query.py  type_.py  web_config.py
docker/: cmd.sh  config.py
migrations/versions/: ef4e36b7f296_initial_migration.py
tests/: __init__.py  acl.sqlite3  config.py  conftest.py  constants.py  product.sqlite3  test_bpgraphql.py  test_bpquery.py  test_create_app.py  test_db.py  test_factory.py  test_fixtures.py  test_models.py  test_schema.py  test_version.py
tests/auth/: conftest.py  test_get_token_from_http_headers.py  test_is_admin.py  test_is_signed_in.py
tests/blueprint/: test_disable_graphiql.py  test_disable_mutation.py  test_graphiql.py  test_graphiql_template.py  test_graphql.py  test_schema_based_on_auth.py  test_url_path_graphql.py
tests/blueprint/snapshots/: snap_test_schema_based_on_auth.py  (+1 more)
tests/db/: test_cmds.py  test_conn.py  test_db.py  test_gitb.py  test_obs.py  test_sa.py
tests/github/: test_get_token.py  test_get_user.py
tests/misc/: test_cap.py  test_lock.py
tests/models/: conftest.py  test_add_owners.py  test_example_add.py  test_example_backref.py  test_example_date.py  test_example_delete.py  test_example_query.py  test_example_update.py  test_models.py  test_modify.py  test_product_file_paths.py  test_product_relation_types.py  test_product_relations.py
tests/ops/: conftest.py  test_field.py  test_log.py  test_product.py  test_product_file_path.py  test_product_relation.py  test_product_relation_type.py  test_product_type.py  test_web_config.py
tests/sample/: .gitignore  config.py  product.sqlite3
tests/schema/: conftest.py  funcs.py  test_alembic_version.py  test_error.py  test_mutation.py  test_query.py  test_query_version.py  test_schema.py  test_version.py
tests/snapshots/: snap_test_bpgraphql.py
(+531 files in other folders)
